王者荣耀筛选器

--- a/07_王者荣耀筛选器/pages/index/index.wxml
+++ b/07_王者荣耀筛选器/pages/index/index.wxml
@@ -1,11 +1,7 @@
 <view>
 	<radio-group bindchange="changeOption">
-		<radio class="radio" value="射手" checked="{{nowType == '射手'}}">射手</radio>
-		<radio class="radio" value="法师" checked="{{nowType == '法师'}}">法师</radio>
-		<radio class="radio" value="坦克" checked="{{nowType == '坦克'}}">坦克</radio>
-		<radio class="radio" value="辅助" checked="{{nowType == '辅助'}}">辅助</radio>
-		<radio class="radio" value="战士" checked="{{nowType == '战士'}}">战士</radio>
-		<radio class="radio" value="刺客" checked="{{nowType == '刺客'}}">刺客</radio>
+		<radio class="radio" wx:for="{{typeArr}}" wx:key="index" 
+			value="{{item}}" checked="{{nowType == item}}">{{item}}</radio>
 	</radio-group>
 	<view class="yx" wx:for="{{arr}}" wx:key="index">
 		<image src="http://www.aiqianduan.com:56506/images/wzry/{{item.pic}}.jpg"></image>
