--- a/20_lianxi_ceshi/components/drawer_inner/drawer_inner.wxss
+++ b/20_lianxi_ceshi/components/drawer_inner/drawer_inner.wxss
@@ -34,6 +34,9 @@
     border: 1px solid #eee;
     background: white;
 }
+.sx_grid .content .btn.cur{
+    background-color: yellow;
+}
 
 .bottom_box {
     width: 100%;
