--- a/20_lianxi_ceshi_c1/components/drawer_inner/drawer_inner.wxss
+++ b/20_lianxi_ceshi_c1/components/drawer_inner/drawer_inner.wxss
@@ -1,1 +1,54 @@
-/* components/drawer_inner/drawer_inner.wxss */
+.page {
+    padding: 10px;
+}
+
+.pinpai {
+    font-size: 18px;
+    border-bottom: 1px solid #ccc;
+    line-height: 30px;
+    margin-bottom: 10px;
+}
+
+.page .box .brand {
+    float: left;
+    width: 33.33%;
+    background-color: #eee;
+    font-size: 14px;
+    line-height: 30px;
+    border-right: 10px solid white;
+    box-sizing: border-box;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.page .box .brand:nth-child(3n) {
+    border-right: none;
+}
+
+.page .box .brand.allbrand {
+    background-color: white;
+    border: 1px solid #eee;
+}
+
+.bottom {
+    display: flex;
+    height: 50px;
+    border-top: 1px solid #ccc;
+}
+
+.bottom_left {
+    flex: 1;
+    font-size: 14px;
+    line-height: 50px;
+    height: 50px;
+    text-align: center;
+}
+
+.bottom_right {
+    flex: 1;
+    font-size: 14px;
+    line-height: 50px;
+    height: 50px;
+    text-align: center;
+    background-color: orange;
+}
