二手车筛选

--- a/20_lianxi_ceshi_c1/components/drawer_inner/drawer_inner.wxss
+++ b/20_lianxi_ceshi_c1/components/drawer_inner/drawer_inner.wxss
@@ -29,6 +29,9 @@
     background-color: white;
     border: 1px solid #eee;
 }
+.page .box .brand.cur{
+    background-color: yellow;
+}
 
 .bottom {
     display: flex;
