--- a/20_lianxi_ceshi_c1/components/drawer_inner/drawer_inner.wxml
+++ b/20_lianxi_ceshi_c1/components/drawer_inner/drawer_inner.wxml
@@ -1,22 +1,29 @@
 <view class="page">
-	<scroll-view scroll-y="true" style="height:{{windowHeight-51}}px">
-		<view class="pinpai">品牌</view>
-		<view class="box">
-			<view class="brand">宝马</view>
-			<view class="brand">奥迪</view>
-			<view class="brand">本田</view>
-			<view class="brand">丰田</view>
-			<view class="brand">奔驰</view>
-			<view class="brand">标志</view>
-			<view class="brand">大众</view>
-			<view class="brand">路虎</view>
-			<view class="brand allbrand">查看全部</view>
-		</view>
-	</scroll-view>
+	<view wx:if="{{showPage == 'main'}}">
+		<scroll-view scroll-y="true" style="height:{{windowHeight-51}}px">
+			<view class="pinpai" style="overflow:hidden">
+				<view style="float:left">品牌</view>
+				<view style="float:right;font-size:13px">当前:{{brand}}</view>
+			</view>
+			<view class="box">
+				<view class="brand {{brand=='宝马' ? 'cur' : ''}}">宝马</view>
+				<view class="brand {{brand=='奥迪' ? 'cur' : ''}}">奥迪</view>
+				<view class="brand {{brand=='本田' ? 'cur' : ''}}">本田</view>
+				<view class="brand {{brand=='丰田' ? 'cur' : ''}}">丰田</view>
+				<view class="brand {{brand=='奔驰' ? 'cur' : ''}}">奔驰</view>
+				<view class="brand {{brand=='标志' ? 'cur' : ''}}">标志</view>
+				<view class="brand {{brand=='大众' ? 'cur' : ''}}">大众</view>
+				<view class="brand {{brand=='路虎' ? 'cur' : ''}}">路虎</view>
+				<view class="brand allbrand" bindtap="allPinpai">查看全部</view>
+			</view>
+		</scroll-view>
 
-	<view class="bottom">
-		<view class="bottom_left">取消</view>
-		<view class="bottom_right">确定</view>
+		<view class="bottom">
+			<view class="bottom_left">取消</view>
+			<view class="bottom_right" bindtap="ok_han_yes">确定</view>
+		</view>
 	</view>
 
+
+	<all_brand wx:if="{{showPage == 'all_brand'}}" bind:ok="all_brand_okHan"></all_brand>
 </view>
