--- a/19_ceshi/components/all-brand/all-brand.wxml
+++ b/19_ceshi/components/all-brand/all-brand.wxml
@@ -9,7 +9,7 @@
 		</i-index>
 	</view>
 	<view class="bottom_box">
-		<view class="btn1">取消</view>
+		<view class="btn1" bindtap="cancelHan">取消</view>
 		<view class="btn2" bindtap="okHan">确定</view>
 	</view>
 </view>
