--- a/19_ceshi/components/show-all/show-all.wxml
+++ b/19_ceshi/components/show-all/show-all.wxml
@@ -12,7 +12,7 @@
 
 	</scroll-view>
 	<view class="bottom_box">
-		<view class="btn1">取消</view>
+		<view class="btn1" bindtap="cancel_Han">取消</view>
 		<view class="btn2" bindtap="okHan">确定</view>
 	</view>
 </view>
