--- a/19_ceshi3/components/show-all/show-all.wxml
+++ b/19_ceshi3/components/show-all/show-all.wxml
@@ -9,7 +9,7 @@
 		</view>
 	</scroll-view>
 	<view class="bottom_btn">
-		<view class="btn1">取消</view>
+		<view class="btn1" bindtap="cancelHan">取消</view>
 		<view class="btn2" bindtap="okHan">确定</view>
 	</view>
 </view>
