--- a/19_ceshi/components/drawer-inner/drawer-inner.wxml
+++ b/19_ceshi/components/drawer-inner/drawer-inner.wxml
@@ -3,6 +3,7 @@
 	<wxs src="tool.wxs" module="tool" />
 	<view wx:if="{{nowshow == 'main'}}">
 		<scroll-view scroll-y="true" style="height:{{windowHeight-51}}px">
+			<!-- 品牌筛选器 -->
 			<view class="sx_grid">
 				<view class="title" style="overflow:hidden">
 					<view style="float:left">品牌</view>
@@ -13,6 +14,20 @@
 					<view class="btn all" bindtap="showallbrand">查看全部</view>
 				</view>
 			</view>
+
+			<!-- 车系筛选器 -->
+			<view class="sx_grid" wx:if="{{brand}}">
+				<view class="title" style="overflow:hidden">
+					<view style="float:left">车系</view>
+					<view style="float:right;font-size:14px">当前:{{now.series}}</view>
+				</view>
+				<view class="content">
+					<view class="btn {{tool.checkInArr(now.series, item) ? 'cur' : ''}}" wx:for="{{allbs[brand].length > 5 ? tool.myslice(allbs[brand],0,5) : allbs[brand]}}" wx:key="index" bindtap="ppphan" data-k="series" data-v="{{item}}">{{item}}</view>
+					<view class="btn all" bindtap="showallbrand">查看全部</view>
+				</view>
+			</view>
+
+			<!-- 其他筛选器 -->
 			<view class="sx_grid" wx:for="{{filters}}" wx:key="e" wx:for-item="lm">
 				<view class="title" style="overflow:hidden">
 					<view style="float:left">{{lm.c}}
