--- a/19_ceshi/components/drawer-inner/drawer-inner.wxml
+++ b/19_ceshi/components/drawer-inner/drawer-inner.wxml
@@ -18,12 +18,33 @@
 			<!-- 车系筛选器 -->
 			<view class="sx_grid" wx:if="{{brand}}">
 				<view class="title" style="overflow:hidden">
-					<view style="float:left">车系</view>
-					<view style="float:right;font-size:14px">当前:{{now.series}}</view>
+					<view style="float:left">车系<text style="font-size:12px">（可多选）</text></view>
+					<view style="float:right;font-size:14px">当前:{{now.series.length > 3 ?  tool.myslice(now.series,0,2)+'等'+now.series.length+'项' : now.series}}</view>
 				</view>
 				<view class="content">
 					<view class="btn {{tool.checkInArr(now.series, item) ? 'cur' : ''}}" wx:for="{{allbs[brand].length > 5 ? tool.myslice(allbs[brand],0,5) : allbs[brand]}}" wx:key="index" bindtap="ppphan" data-k="series" data-v="{{item}}">{{item}}</view>
-					<view class="btn all" bindtap="showallbrand">查看全部</view>
+					<view class="btn all" bindtap="showalloption" data-e="series" data-options="{{allbs[brand]}}"  data-c="{{brand}}" wx:if="{{allbs[brand].length > 5}}">查看全部</view>
+				</view>
+			</view>
+
+			<!-- 购买日期 -->
+			<view class="sx_grid">
+				<view class="title" style="overflow:hidden">
+					<view style="float:left">购买日期</view>
+					<view style="float:right;font-size:14px" wx:if="{{date1 != '' && date2 != ''}}">当前:{{date1}} 至 {{date2}}</view>
+				</view>
+				<view class="content">
+					<picker mode="date" value="{{date1}}" start="2000-01-01" end="{{nowdate}}" bindchange="bindDateChange1">
+						<view class="picker">
+						当前选择: {{date1}}
+						</view>
+					</picker>
+					<picker mode="date" value="{{date2}}" start="2000-01-01" end="{{nowdate}}" bindchange="bindDateChange2">
+						<view class="picker">
+						当前选择: {{date2}}
+						</view>
+					</picker>
+					<view style="padding:6px;background:#eee;width:28%;text-align:center" bindtap="resetbtn_times">重置日期</view>
 				</view>
 			</view>
 
