--- a/19_ceshi2/pages/search_result/tool.wxs
+++ b/19_ceshi2/pages/search_result/tool.wxs
@@ -6,6 +6,14 @@ function theOneItemInArray(arr, e) {
     }
     return {}
 }
+// 时间戳转换成日期对象
+function timesDate(timestamp) {
+    var dateobj = getDate(timestamp);
+    return dateobj.getFullYear() + '-' +
+        dateobj.getMonth() + '-' +
+        dateobj.getDate()
+}
 module.exports = {
-    theOneItemInArray: theOneItemInArray
+    theOneItemInArray: theOneItemInArray,
+    timesDate: timesDate
 }
