--- a/19_ceshi1/pages/index/index.wxml
+++ b/19_ceshi1/pages/index/index.wxml
@@ -1,33 +1,9 @@
-<view class="page">
-	<view class="slider_bar" style="height:{{windowHeight}}px">
-		<view wx:for="{{products_keys}}" wx:key="index" class="lm_left {{nowtype==item?'cur':''}}" bindtap="changetype" data-index="{{index}}" data-name="{{item}}">
-			{{item}}
-		</view>
-	</view>
-	<view class="content" style="height:{{windowHeight}}px">
-		<scroll-view scroll-y="true" style="height:{{windowHeight}}px" scroll-into-view="t{{nowid}}" scroll-with-animation="true" bindscroll="scrollHan">
-			<!-- 定义模板 -->
-			<template name="the_temp">
-				<view class="the_temp" id="t{{index}}">
-					<view class="title">
-						{{title}}
-					</view>
-					<view class="lm" wx:for="{{the_products_keys}}" wx:key="index">
-						<view class="pic">
-							<image src="http://www.aiqianduan.com:56506/images/productpics/{{item.pic}}"></image>
-						</view>
-						<view class="wz">
-							{{item.name}}
-						</view>
-
-					</view>
-				</view>
-			</template>
-			<view wx:for="{{products_keys}}" wx:key="index">
-				<template is="the_temp" data="{{title:item,the_products_keys:products[item],index:index}}"></template>
-			</view>
-		</scroll-view>
-
-
-	</view>
+<view class="topbox">
+    <view class="kuang" bindtap="gotososo">
+        <image class="fdj" src="/images/fdj.png"></image>
+        <text>华为P40手机</text>
+    </view>
+    <view>
+        <view>我是首页</view>
+    </view>
 </view>
