--- a/19_ceshi2/pages/index/index.wxss
+++ b/19_ceshi2/pages/index/index.wxss
@@ -1,60 +1,21 @@
-.page {
-    display: flex;
+.topbox{
+    padding: 10px 20px;
 }
-
-.page .slider_bar {
-    width: 80px;
-    background-color: #ccc;
-
-}
-
-.lm_left {
-    font-size: 16px;
+.topbox .search{
+    width: 100%;
+    height: 30px;
+    background-color: #eee;
+    border-radius: 20px;
+    position: relative;
     line-height: 30px;
-    text-align: center;
-    border-left: 3px solid transparent;
-}
-
-.lm_left.cur {
-    background-color: white;
-    border-left: 3px solid orange;
-}
-
-.page .content {
-    flex: 1;
-    padding-left: 10px;
-}
-
-.the_temp .title {
-    font-size: 20px;
-    line-height: 40px;
-    text-align: center;
-    font-weight: bold;
-    height: 40px;
-}
-
-.lm {
-    height: 110px;
-    display: flex;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 10px;
-    margin-bottom: 10px;
+    font-size: 14px;
+    padding-left: 40px;
     box-sizing: border-box;
 }
-
-.lm .pic {
-    width: 90px;
-    height: 90px;
-}
-
-.lm .pic image {
-    width: 90px;
-    height: 90px;
-}
-
-.lm .wz {
-    flex: 1;
-    font-size: 14px;
-    padding-left: 10px;
+.topbox .search .fdj{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 5px;
+    left: 5px; 
 }
